src/trusted/validator_arm/testdata/bad/invalid_load_to_sp.dis
       0:	e590d042 		ldr	sp, [r0, #66]
       4:	e0800000 		add	r0, r0, r0
